fix gaps

--- a/src/sass/60_components/_components.form.scss
+++ b/src/sass/60_components/_components.form.scss
@@ -119,6 +119,7 @@
       background-color: unset;
       padding: 0;
       border: 0;
+      gap: 1rem 2rem;
       @include media-breakpoint-up(md) {
         grid-template-columns: repeat(2, minmax(0, 1fr));
       }
